# NeuralNetwork

./: CMakeLists.txt  README.md  main.cpp
OldNeuralNetwork/: CMakeLists.txt  main.cpp
OldNeuralNetwork/include/: ColorGrid.hpp  NetworkStructure.hpp  NetworkTrainingStrategies.hpp  NetworkVisuals.hpp
OldNeuralNetwork/include/render/: ErrorRender.hpp  NetworkVisualization.hpp  NeuronRender.hpp  WeightRender.hpp
OldNeuralNetwork/include/structure/: LayerIterator.hpp  NeuralNetwork.hpp  Neuron.hpp  NeuronLayer.hpp  Weight.hpp
OldNeuralNetwork/include/training/: NetworkTraining.hpp  TrainingStrategy.hpp
OldNeuralNetwork/source/: ColorGrid.cpp
OldNeuralNetwork/source/render/: ErrorRender.cpp  NetworkVisualization.cpp  NeuronRender.cpp  WeightRender.cpp
OldNeuralNetwork/source/structure/: LayerIterator.cpp  NeuralNetwork.cpp  Neuron.cpp  NeuronLayer.cpp  Weight.cpp
OldNeuralNetwork/source/training/: NetworkTraining.cpp
include/: NetworkStructure.hpp  NetworkTraining.hpp  NetworkVisuals.hpp
include/render/: ColorGrid.hpp  NetworkVisualization.hpp  NeuronRender.hpp  WeightRender.hpp
include/structure/: NeuralNetwork.hpp  NeuronLayer.hpp
include/training/: ActivationFunction.hpp  TrainingStrategy.hpp
source/render/: ColorGrid.cpp  NetworkVisualization.cpp  NeuronRender.cpp  TextRender.cpp  WeightRender.cpp
source/structure/: NeuralNetwork.cpp  NeuronLayer.cpp
source/training/: ActivationFunction.cpp  TrainingStrategy.cpp
src/: main.cpp
src/render/: ColorGrid.cpp  ColorGrid.hpp  NetworkVisualization.cpp  NetworkVisualization.hpp  NeuronRender.cpp  NeuronRender.hpp  TextRender.cpp  TextRender.hpp  WeightRender.cpp
src/structure/: NeuralNetwork.cpp  NeuralNetwork.hpp  NeuronLayer.cpp  NeuronLayer.hpp
src/training/: ActivationFunction.cpp  TrainingStrategy.cpp  TrainingStrategy.hpp
